--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
      <header>
         <div class="logo"><a href="index.html">АЛЬФА<span style="color: black;font-size: .8em;margin-left: .3em;">news</a></span>
         </div>
-        <div class="spacebetween">    </div>
-        <div class="menubtn" style="margin-top: .5em;margin-right: 2em;">О ПРОЕКТЕ</div>
+        <div class="spacebetween">
+        <div class="menubtn" style="margin-top:1%;margin-right: 2%;">О ПРОЕКТЕ</div>
         <a href="registration.html"><div class="reg">Создать аккаунт</div></a>
         <div class="search" data-toggle="modal" data-target="#exampleModalCenter">
-            <img src="free-icon-search-4024513.png">
+            <img src="red-search.jpg">
         </div>
+      </div>
      </header>
      <!-- Modal -->
 	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -37,6 +38,112 @@
     <div class="menubtn">ИГРЫ</div>
     <div class="menubtn">КИНОИНДУСТРИЯ</div>
   </div>
+  <div class="newsblock">
+    <h1>АВТО</h1>
+    <div style="display: flex;justify-content: center;">
+    <div class="new"><img src="italian-bike.jpeg"><br><span>Итальянская компания показала необычный электрический скутер в ретро-стиле</span>
+      <div class="date" style="margin-top: 2em;"></div>
+    </div>
+    <div class="new"><img src="backtofuture.jpg"><br><span>Культовое авто из фильма "Назад в будущее" превратили в скоростной электромобиль</span>
+      <div class="date" style="margin-top: 2em;"></div>
+    </div>
+    <div class="new"><img src="chinese.jpg"><br><span>Китайская компания представила конкурента Tesla с экстравагантным дизайном</span>
+      <div class="date" style="margin-top: 2%;"></div>
+    </div>
+    <div class="new"><img src="xiaomi.jpg"><br><span>Первый автомобиль Xiaomi полностью рассекретили до премьеры</span>
+      <div class="date" style="margin-top: 2em;"></div>
+    </div>
+  </div>
+  <div style="display: flex;">
+  <div class="date">16.11.2023 16:52</div>
+  <div class="date">14.11.2023 19:43</div>
+  <div class="date">14.11.2023 12:12</div>
+  <div class="date">13.11.2023 21:33</div>
+</div>
+  </div>
+  <div class="newsblock">
+    <h1>ТЕХНОЛОГИИ</h1>
+    <div style="display: flex;justify-content: center;">
+    <div class="new"><img src="ipad.jpg"><br><span>Планшеты Apple: идеальный баланс технологий и стиля.Почему они настолько хороши?</span>
+      <div class="date" style="margin-top: 2em;"></div>
+    </div>
+    <div class="new"><img src="asteroid.jpg"><br><span>Уникальный чип улучшит звучание наушников без лишних деталей: в чем секрет технологии</span>
+      <div class="date" style="margin-top: 2em;"></div>
+    </div>
+    <div class="new"><img src="superpc.jpg"><br><span>Cтремительно разгоняется: суперкомпьютер Aurora выполнит 2 квинтиллиона операций в секунду</span>
+      <div class="date" style="margin-top: 2%;"></div>
+    </div>
+    <div class="new"><img src="copilot.jpg"><br><span>Microsoft встроила ИИ Bing Chat в систему Windows: теперь он стал еще доступнее и удобнее</span>
+      <div class="date" style="margin-top: 2em;"></div>
+    </div>
+  </div>
+  <div style="display: flex;">
+  <div class="date">16.11.2023 13:22</div>
+  <div class="date">15.11.2023 23:34</div>
+  <div class="date">15.11.2023 09:12</div>
+  <div class="date">13.11.2023 16:30</div>
+</div>
+</div>
+<div class="newsblock">
+  <h1>ИГРЫ</h1>
+  <div style="display: flex;justify-content: center;">
+  <div class="new"><img src="gta6.jpg"><br><span>GTA 6.Чего мы ждем от главного ожидания десятилетия? Что известно на данный момент?</span>
+    <div class="date" style="margin-top: 2em;"></div>
+  </div>
+  <div class="new"><img src="halflife.jpg"><br><span>Half-Life исполняется 25 лет: бесплатная раздача игры в Steam и юбилейное обновление</span>
+    <div class="date" style="margin-top: 2em;"></div>
+  </div>
+  <div class="new"><img src="nintendo.jpg"><br><span>Энтузиасты модифицировали Nintendo Switch для запуска современных компьютерных игр</span>
+    <div class="date" style="margin-top: 2%;"></div>
+  </div>
+  <div class="new"><img src="lastofus.jpg"><br><span>Анонсирован ремастер The Last of Us Part II. Релиз 19 января на PS5</span>
+    <div class="date" style="margin-top: 2em;"></div>
+  </div>
+</div>
+<div style="display: flex;">
+<div class="date">13.11.2023 10:41</div>
+<div class="date">12.11.2023 22:09</div>
+<div class="date">12.11.2023 09:32</div>
+<div class="date">11.11.2023 17:55</div>
+</div>
+</div>
+<div class="newsblock">
+  <h1>КИНОИНДУСТРИЯ</h1>
+  <div style="display: flex;justify-content: center;">
+  
+  <div class="new"><img src="marvels.jpg"><br><span>Марвелы стали самым провальным фильмом киновселенной. Анти-рекорд</span>
+    <div class="date" style="margin-top: 2em;"></div>
+  </div>
+  <div class="new"><img src="killers.jpg"><br><span>"Убийцы цветочной луны": у премьерного шедевра с Ди Каприо и Де Ниро есть один "убийственный" недостаток</span>
+    <div class="date" style="margin-top: 2%;"></div>
+  </div>
+  <div class="new"><img src="avengers.jpg"><br><span>Звезду «Мстители 5» решили выгнать из фильмов Marvel и заменить</span>
+    <div class="date" style="margin-top: 2em;"></div>
+  </div>
+  <div class="new"><img src="fnaf.jpg"><br><span>Эру комиксов в кино сменили игры? В чем секрет успеха “Пяти ночей с Фредди”</span>
+    <div class="date" style="margin-top: 2em;"></div>
+  </div>
+</div>
+<div style="display: flex;">
+<div class="date">15.11.2023 13:17</div>
+<div class="date">12.11.2023 18:19</div>
+<div class="date">10.11.2023 10:32</div>
+<div class="date">10.11.2023 08:55</div>
+</div>
+</div>
+<footer>
+  <div class="logo"><a href="index.html">АЛЬФА<span style="color: black;font-size: .8em;margin-left: .3em;">news</a></span></div>
+
+    <div class="menu" >
+      <div class="menubtn">ВСЕ НОВОСТИ</div>
+      <div class="menubtn">АВТО</div>
+      <div class="menubtn">ТЕХНОЛОГИИ</div>
+      <div class="menubtn">ИГРЫ</div>
+      <div class="menubtn">КИНОИНДУСТРИЯ</div>
+    </div>
+
+</footer>
+
      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
      crossorigin="anonymous"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
