--- a/allnews.html
+++ b/allnews.html
@@ -55,65 +55,145 @@
   <div class="newsblock" style="border-bottom:none;">
     <h1 id="cars">ВСЕ НОВОСТИ</h1>
     <div style="display: flex;justify-content: center;">
-    <div class="new"><img src="italian-bike.jpeg"><br><span>Итальянская компания показала необычный электрический скутер в ретро-стиле</span>
-      <div class="date" style="margin-top: 2em;"></div>
+    <div class="new"><img src="italian-bike.jpeg"><br><span>Итальянская компания показала необычный электрический скутер в ретро-стиле</span><br><br>
+      <b style="color: gray;">18.11.2023 11:52</b>
     </div>
-    <div class="new"><img src="backtofuture.jpg"><br><span>Культовое авто из фильма "Назад в будущее" превратили в скоростной электромобиль</span>
-      <div class="date" style="margin-top: 2em;"></div>
+    <div class="new"><img src="ipad.jpg"><br><span>Планшеты Apple: идеальный баланс технологий и стиля.Почему они настолько хороши?</span><br>
+      <b style="color: gray;">16.11.2023 13:52</b>
     </div>
-    <div class="new"><img src="chinese.jpg"><br><span>Китайская компания представила конкурента Tesla с экстравагантным дизайном</span>
-      <div class="date" style="margin-top: 2%;"></div>
+    <div class="new"><img src="marvels.jpg"><br><span>Марвелы стали самым провальным фильмом киновселенной. Анти-рекорд</span><br><br>
+      <b style="color: gray;">15.11.2023 13:17</b>
     </div>
-    <div class="new"><img src="xiaomi.jpg"><br><span>Первый автомобиль Xiaomi полностью рассекретили до премьеры</span>
-      <div class="date" style="margin-top: 2em;"></div>
+    <div class="new"><img src="asteroid.jpg"><br><span>Уникальный чип улучшит звучание наушников без лишних деталей: в чем секрет технологии</span><br><br>
+      <b style="color: gray;">15.11.2023 23:34</b>
+    </div>
+    </div>
+    </div>
+    <div class="newsblock-hidden" style="border-bottom:none">
+      <div style="display: block;justify-content: center;">
+        <div style="display: flex;">
+          <div class="new"><img src="italian-bike.jpeg"><br><span>Итальянская компания показала необычный электрический скутер в ретро-стиле</span><br><br>
+            <b style="color: gray;">18.11.2023 11:52</b>
+      </div>
+      <div class="new"><img src="ipad.jpg"><br><span>Планшеты Apple: идеальный баланс технологий и стиля.Почему они настолько хороши?</span><br>
+        <b style="color: gray;">16.11.2023 13:52</b>
+      </div>
+    </div>
+    <div style="display: flex;margin-top: 2em;">
+      <div class="new"><img src="marvels.jpg"><br><span>Марвелы стали самым провальным фильмом киновселенной. Анти-рекорд</span><br><br>
+        <b style="color: gray;">15.11.2023 13:17</b>
+      </div>
+      <div class="new"><img src="asteroid.jpg"><br><span>Уникальный чип улучшит звучание наушников без лишних деталей: в чем секрет технологии</span><br><br>
+        <b style="color: gray;">15.11.2023 23:34</b>
+      </div>
     </div>
     </div>
     </div>
     <div class="newsblock" style="border-bottom:none ;">
         <div style="display: flex;justify-content: center;">
-        <div class="new"><img src="italian-bike.jpeg"><br><span>Итальянская компания показала необычный электрический скутер в ретро-стиле</span>
-          <div class="date" style="margin-top: 2em;"></div>
+          <div class="new"><img src="superpc.jpg"><br><span>Cтремительно разгоняется: суперкомпьютер Aurora выполнит 2 квинтиллиона операций в секунду</span><br><br>
+            <b style="color: gray;">15.11.2023 09:12</b>
         </div>
-        <div class="new"><img src="backtofuture.jpg"><br><span>Культовое авто из фильма "Назад в будущее" превратили в скоростной электромобиль</span>
-          <div class="date" style="margin-top: 2em;"></div>
+        <div class="new"><img src="gta6.jpg"><br><span>GTA 6.Чего мы ждем от главного ожидания десятилетия? Что известно на данный момент?</span><br><br>
+          <b style="color: gray;">13.11.2023 10:41</b>
         </div>
-        <div class="new"><img src="chinese.jpg"><br><span>Китайская компания представила конкурента Tesla с экстравагантным дизайном</span>
-          <div class="date" style="margin-top: 2%;"></div>
+        <div class="new"><img src="backtofuture.jpg"><br><span>Культовое авто из фильма "Назад в будущее" превратили в скоростной электромобиль</span><br><br>
+          <b style="color: gray;">15.11.2023 13:42</b>
         </div>
-        <div class="new"><img src="xiaomi.jpg"><br><span>Первый автомобиль Xiaomi полностью рассекретили до премьеры</span>
-          <div class="date" style="margin-top: 2em;"></div>
+        <div class="new"><img src="xiaomi.jpg"><br><span>Первый автомобиль Xiaomi полностью рассекретили до премьеры</span><br><br>
+          <b style="color: gray;">12.11.2023 21:45</b>
+        </div>
+        </div>
+        </div>
+        <div class="newsblock-hidden" style="border-bottom:none">
+          <div style="display: block;justify-content: center;">
+            <div style="display: flex;">
+              <div class="new"><img src="superpc.jpg"><br><span>Cтремительно разгоняется: суперкомпьютер Aurora выполнит 2 квинтиллиона операций в секунду</span><br><br>
+                <b style="color: gray;">15.11.2023 09:12</b>
+          </div>
+          <div class="new"><img src="gta6.jpg"><br><span>GTA 6.Чего мы ждем от главного ожидания десятилетия? Что известно на данный момент?</span><br><br>
+            <b style="color: gray;">13.11.2023 10:41</b>
+          </div>
+        </div>
+        <div style="display: flex;margin-top: 2em;">
+          <div class="new"><img src="backtofuture.jpg"><br><span>Культовое авто из фильма "Назад в будущее" превратили в скоростной электромобиль</span><br><br>
+            <b style="color: gray;">15.11.2023 13:42</b>
+          </div>
+          <div class="new"><img src="xiaomi.jpg"><br><span>Первый автомобиль Xiaomi полностью рассекретили до премьеры</span><br><br>
+            <b style="color: gray;">12.11.2023 21:45</b>
+          </div>
         </div>
         </div>
         </div>
         <div class="newsblock" style="border-bottom:none ;">
             <div style="display: flex;justify-content: center;">
-            <div class="new"><img src="italian-bike.jpeg"><br><span>Итальянская компания показала необычный электрический скутер в ретро-стиле</span>
-              <div class="date" style="margin-top: 2em;"></div>
+              <div class="new"><img src="copilot.jpg"><br><span>Microsoft встроила ИИ Bing Chat в систему Windows: теперь он стал еще доступнее и удобнее</span><br><br>
+                <b style="color: gray;">13.11.2023 16:30</b>
             </div>
-            <div class="new"><img src="backtofuture.jpg"><br><span>Культовое авто из фильма "Назад в будущее" превратили в скоростной электромобиль</span>
-              <div class="date" style="margin-top: 2em;"></div>
+            <div class="new"><img src="nintendo.jpg"><br><span>Энтузиасты модифицировали Nintendo Switch для запуска современных компьютерных игр</span><br><br>
+              <b style="color: gray;">12.11.2023 09:32</b>
             </div>
-            <div class="new"><img src="chinese.jpg"><br><span>Китайская компания представила конкурента Tesla с экстравагантным дизайном</span>
-              <div class="date" style="margin-top: 2%;"></div>
+            <div class="new"><img src="halflife.jpg"><br><span>Half-Life исполняется 25 лет: бесплатная раздача игры в Steam и юбилейное обновление</span><br><br>
+              <b style="color: gray;">12.11.2023 22:09</b>
             </div>
-            <div class="new"><img src="xiaomi.jpg"><br><span>Первый автомобиль Xiaomi полностью рассекретили до премьеры</span>
-              <div class="date" style="margin-top: 2em;"></div>
+            <div class="new"><img src="killers.jpg"><br><span>"Убийцы цветочной луны": у премьерны с Ди Каприо и Де Ниро есть один недостаток</span><br><br>
+              <b style="color: gray;">12.11.2023 18:19</b> 
+            </div>
+            </div>
+            </div>
+            <div class="newsblock-hidden" style="border-bottom:none">
+              <div style="display: block;justify-content: center;">
+                <div style="display: flex;">
+                  <div class="new"><img src="copilot.jpg"><br><span>Microsoft встроила ИИ Bing Chat в систему Windows: теперь он стал еще доступнее и удобнее</span><br><br>
+                    <b style="color: gray;">13.11.2023 16:30</b>
+              </div>
+              <div class="new"><img src="nintendo.jpg"><br><span>Энтузиасты модифицировали Nintendo Switch для запуска современных компьютерных игр</span><br><br>
+                <b style="color: gray;">12.11.2023 09:32</b>
+              </div>
+            </div>
+            <div style="display: flex;margin-top: 2em;">
+              <div class="new"><img src="halflife.jpg"><br><span>Half-Life исполняется 25 лет: бесплатная раздача игры в Steam и юбилейное обновление</span><br><br>
+                <b style="color: gray;">12.11.2023 22:09</b>
+              </div>
+              <div class="new"><img src="killers.jpg"><br><span>"Убийцы цветочной луны": у премьерны с Ди Каприо и Де Ниро есть один недостаток</span><br><br>
+                <b style="color: gray;">12.11.2023 18:19</b> 
+              </div>
             </div>
             </div>
             </div>
             <div class="newsblock">
                 <div style="display: flex;justify-content: center;">
-                <div class="new"><img src="italian-bike.jpeg"><br><span>Итальянская компания показала необычный электрический скутер в ретро-стиле</span>
-                  <div class="date" style="margin-top: 2em;"></div>
+                  <div class="new"><img src="chinese.jpg"><br><span>Китайская компания представила конкурента Tesla с экстравагантным дизайном</span><br><br>
+                    <b style="color: gray;">12.11.2023 09:52</b>
                 </div>
-                <div class="new"><img src="backtofuture.jpg"><br><span>Культовое авто из фильма "Назад в будущее" превратили в скоростной электромобиль</span>
-                  <div class="date" style="margin-top: 2em;"></div>
+                <div class="new"><img src="lastofus.jpg"><br><span>Анонсирован ремастер The Last of Us Part II. Релиз состоится 19 января на PS5</span><br><br>
+                  <b style="color: gray;">11.11.2023 17:55</b>
                 </div>
-                <div class="new"><img src="chinese.jpg"><br><span>Китайская компания представила конкурента Tesla с экстравагантным дизайном</span>
-                  <div class="date" style="margin-top: 2%;"></div>
+                <div class="new"><img src="avengers.jpg"><br><span>Звезду «Мстители 5» решили выгнать из фильмов Marvel и заменить</span><br><br>
+                  <b style="color: gray;">10.11.2023 10:32</b>
                 </div>
-                <div class="new"><img src="xiaomi.jpg"><br><span>Первый автомобиль Xiaomi полностью рассекретили до премьеры</span>
-                  <div class="date" style="margin-top: 2em;"></div>
+                <div class="new"><img src="fnaf.jpg"><br><span>Эру комиксов в кино сменили игры? В чем секрет успеха “Пяти ночей с Фредди”</span><br><br>
+                  <b style="color: gray;">10.11.2023 08:55</b>
+                </div>
+                </div>
+                </div>
+                <div class="newsblock-hidden">
+                  <div style="display: block;justify-content: center;">
+                    <div style="display: flex;">
+                      <div class="new"><img src="chinese.jpg"><br><span>Китайская компания представила конкурента Tesla с экстравагантным дизайном</span><br><br>
+                        <b style="color: gray;">12.11.2023 09:52</b>
+                  </div>
+                  <div class="new"><img src="lastofus.jpg"><br><span>Анонсирован ремастер The Last of Us Part II. Релиз состоится 19 января на PS5</span><br><br>
+                    <b style="color: gray;">11.11.2023 17:55</b>
+                  </div>
+                </div>
+                <div style="display: flex;margin-top: 2em;">
+                  <div class="new"><img src="avengers.jpg"><br><span>Звезду «Мстители 5» решили выгнать из фильмов Marvel и заменить</span><br><br>
+                    <b style="color: gray;">10.11.2023 10:32</b>
+                  </div>
+                  <div class="new"><img src="fnaf.jpg"><br><span>Эру комиксов в кино сменили игры? В чем секрет успеха “Пяти ночей с Фредди”</span><br><br>
+                    <b style="color: gray;">10.11.2023 08:55</b>
+                  </div>
                 </div>
                 </div>
                 </div>
